# cloud-cost-backend

./: .env.example  .env_example  .example_env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  prometheus.yml  push_script.sh  pyproject.toml  refresh.sh  requirements.txt  test_aws_pull.py
_platform/: admin.py  models.py  serializers.py  urls.py  views.py
_platform/migrations/: 0001_initial.py  0002_remove_notification_organization.py
auth/: views.py
authentication/: admin.py  auth_backends.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0001_squashed_0002_remove_companymember_company_and_more.py  0002_alter_user_options_alter_user_managers_and_more.py  0002_remove_companymember_company_and_more.py  0003_onetimecredential.py  0003_remove_user_username.py  0004_user_created_at_user_updated_at_company.py  0005_remove_company_members_remove_company_owner_and_more.py  0006_user_is_email_verified.py  0007_alter_user_managers.py
authentication/utils/: hash.py
authentication/views/: oauth.py  passwordless.py  user.py
company/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
company/migrations/: 0001_initial.py  0002_company_owner_alter_company_table_and_more.py  0003_theme_company_theme.py  0004_alter_company_theme_delete_theme.py  0005_alter_company_owner.py
company/serializers/: company.py  org.py
company/urls/: __init__.py  company.py  org.py
company/views/: company.py  org.py
core/: email_utils.py  settings-pythonanywhere.py  settings.py  throttles.py  urls.py  wsgi.py
data/: admin.py  aws_utils.py  aws_views.py  azure_views.py  google_views.py  metrics.py  models.py  serializers.py  urls.py  views.py
data/aggregators/: account.py  cost.py  usage.py  utils.py
data/integration_helpers/: aws.py
docs/: conf.py  custom_expense.rst  data.rst  data_views.rst  index.rst  installation.rst  modules.rst  passwordless_signins.rst  requirements.txt
organizations/: admin.py  models.py  serializers.py  urls.py  views.py
templates/: email.html  index.html
(+200 files in other folders)
